MDL functionality - in prog